unpackaged/main/default/objects/FS_Okta_Callout_Setting__mdt/FS_Okta_Callout_Setting__mdt.object-meta.xml
<CustomObject>
    <label>FS Okta Callout Setting</label>
    <pluralLabel>FS Okta Callout Settings</pluralLabel>
</CustomObject>