unpackaged/main/default/objects/FS_Okta_Callout_Setting__mdt/fields/Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_URL__c</fullName>
    <inlineHelpText>Endpoint URL starts with : https://</inlineHelpText>
    <label>Endpoint URL</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>