unpackaged/main/default/objects/FS_Okta_Callout_Setting__mdt/fields/FS_OKTA_API_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>FS_OKTA_API_Base_URL__c</fullName>
    <inlineHelpText>Base url for OKTA API Endpoints: eg https://nysba-admin.oktapreview.com</inlineHelpText>
    <label>OKTA API Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>