unpackaged/main/default/objects/FS_Okta_Callout_Setting__mdt/fields/Header_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Header_Authorization__c</fullName>
    <label>Header Authorization</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>