unpackaged/main/default/objects/FS_Okta_Callout_Setting__mdt/fields/User_Group__c.field-meta.xml
<CustomField>
    <fullName>User_Group__c</fullName>
    <description>UserGroup to be assigned to User - Community Hub Users</description>
    <inlineHelpText>Public Group Ids (comma separated)</inlineHelpText>
    <label>User Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>